Modify SingleCard and Footer

--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -48,7 +48,7 @@ a:hover {
 .navbarButtons .button {
   border: none;
   background-color: inherit;
-  margin-right: 10px;
+  margin-left: 10px;
 }
 
 .button:active {
