--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -1,19 +1,11 @@
 .footerContainer {
   display: flex;
+  padding: 20px 5%;
 }
 
 .left,
 .right {
   flex: 1;
-}
-
-.right {
-  margin-right: 70px;
-}
-
-.setMargin {
-  margin-left: 70px;
-  margin-top: 20px;
 }
 
 a {
@@ -44,17 +36,20 @@ a:hover {
 .rightIcon {
   width: 20px;
   height: 20px;
+  margin-left: 30px;
 }
 
-.socialMedias .right button {
+.socialMedias .right a {
   width: 50px;
   height: 50px;
   margin-right: 10px;
+  display: inline-block; /* ensure it's treated as a box for transform */
+  transition: transform 0.2s ease;
+  transform-origin: right center; /* optional, default is center */
 }
 
-.socialMedias .right button:hover {
+.socialMedias .right a:hover {
   transform: scale(1.2);
-  transition: transform 0.2s ease;
 }
 
 .footerLinkContainer {
