--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -15,18 +15,18 @@
   margin: 0;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .kleedemyPosterImage {
   border: 2px solid black;
   margin: 30px 80px 30px 80px;
-  width: 400px;
-  height: 520px;
+  width: 420px;
+  height: 530px;
 }
 
 .kleedemyPosterText {
-  margin-left: 50px;
+  margin: 25px 0 0 50px;
   max-width: 500px;
   word-wrap: break-word;
   white-space: normal;
@@ -35,10 +35,33 @@
   justify-content: center;
 }
 
-.basketBtn {
+.kleedemyPosterTitle {
+  font-size: 55px !important;
+}
 
+.basketBtn {
+  text-transform: capitalize !important;
+  color: black !important;
+  border-radius: 0 !important;
+  border-color: black !important;
+  margin: 30px 0 10px 0 !important;
+  padding: 10px 0 !important;
+}
+
+.basketBtn:hover {
+  outline: 2px solid black !important;
 }
 
 .buyBtn {
-  
+  text-transform: capitalize !important;
+  color: white !important;
+  background-color: black !important;
+  border-radius: 0 !important;
+  border-color: black !important;
+  margin: 0 0 10px 0 !important;
+  padding: 10px 0 !important;
+}
+
+.buyBtn:hover {
+  outline: 3px solid black !important;
 }
