--- a/client/src/pages/Store.css
+++ b/client/src/pages/Store.css
@@ -1,11 +1,11 @@
-.kleemartTitle {
+.storeTitle {
   font-size: 60px;
   font-weight: 400;
   text-align: center;
   margin-top: 5px;
 }
 
-.kleemartContainer {
+.storeContainer {
   text-align: justify;
   margin: 0 200px 0 200px;
 }
