--- a/client/src/components/SingleCard.css
+++ b/client/src/components/SingleCard.css
@@ -1,9 +1,12 @@
 .singleCard {
   height: 100%;
+  padding-top: 2px;
   display: flex;
   flex-direction: column;
-  margin-bottom: 150px;
+  /* margin-bottom: 150px; */
   border: none;
+  border-radius: 0px;
+  overflow: hidden;
   box-shadow: none !important;
   /* position: relative; */
 }
@@ -12,22 +15,29 @@
   cursor: pointer;
 }
 
+.singleCardImageWrapper {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+.singleCardImage {
+  width: 100%;
+  height: 100%;
+  border-radius: 0px;
+  transform: scale(1);
+  transition: transform 0.7s ease; /* Applies on hover AND on unhover */
+  object-fit: cover;
+}
+
 .singleCard:hover .singleCardImage {
-  transform: scale(1.05);
+  transform: scale(1.03);
   /* Zoom in */
-  transition: transform 0.7s ease;
-  /* Smooth transition */
 }
 
 .singleCard:hover .MuiTypography-subtitle1 {
   text-decoration: underline;
-}
-
-.singleCardImage {
-  height: 100%;
-  /* width: 100%; */
-  /* display: block; */
-  object-fit: contain;
 }
 
 .singleCardPrice {
@@ -41,9 +51,9 @@
   right: 8px;
   background-color: black;
   color: white;
-  padding: 4px 8px;
+  padding: 5px 16px 5px 16px;
   font-size: 12px;
   font-weight: bold;
-  border-radius: 4px;
+  border-radius: 20px;
   z-index: 2;
 }
