Create Qna files and service, modify frontend files, and complete service for Home page

--- a/client/src/components/ArticleCard.css
+++ b/client/src/components/ArticleCard.css
@@ -18,10 +18,18 @@
 }
 
 .cardTitle {
-  margin-bottom: 10px !important;
+  margin-bottom: 3px !important;
 }
 
 .articleCard:hover .cardTitle {
+  text-decoration: underline;
+}
+
+.homeCardTitle {
+  margin-bottom: 10px !important;
+}
+
+.articleCard:hover .homeCardTitle {
   text-decoration: underline;
 }
 
