--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -28,17 +28,19 @@ li {
 
 li a {
   color: black;
+  cursor: pointer;
   margin-right: 10px;
   text-decoration: none;
 }
 
 .active a {
-  text-decoration: underline;
   color: black;
+  text-decoration: underline;
 }
 
-a:hover {
+li a:hover {
   color: black;
+  text-decoration: underline !important;
 }
 
 .navbarButtons {
