--- a/client/src/components/QnaSection.css
+++ b/client/src/components/QnaSection.css
@@ -2,7 +2,7 @@
   width: 100%;
   max-width: 700px;
   margin: 0 auto; /* center the wrapper */
-  padding: 20px;
+  padding: 5px;
   display: flex;
   flex-direction: column;
   align-items: stretch; /* ensures children take full width */
@@ -31,11 +31,11 @@
   justify-content: space-between;
   align-items: center;
   padding: 12px;
-  border-bottom: 0.5px solid #ccc;
+  border-bottom: 0.5px solid #eee;
 }
 
 .qnaButton:first-of-type {
-  border-top: 0.3px solid #ccc;
+  border-top: 0.3px solid #eee;
 }
 
 .qnaButton:hover {
@@ -49,4 +49,5 @@
 
 .qnaContent {
   padding: 6px 18px;
+  border-bottom: 0.5px solid #eee;
 }
