--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -47,24 +47,39 @@ li a:hover {
   justify-self: end;
 }
 
-.navbarButtons .button {
+.navbarButton {
+  color: black;
   border: none;
   background-color: inherit;
-  margin-left: 10px;
+  margin-left: 25px;
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  padding: 0;
 }
 
-.button:active {
+.navbarButton:active {
   border: none;
 }
 
-.button:hover {
+.navbarButton:hover {
+  color: black;
   transform: scale(1.2);
   transition: transform 0.2s ease;
 }
 
-.icon {
+.navbarIcon {
   width: 20px;
   height: 20px;
+}
+
+.userIcon {
+  width: 25px;
+  height: 25px;
+  position: relative;
+  top: 2px;
 }
 
 .navbarMenuIcon {
