--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,8 +21,11 @@ code {
   font-size: 55px;
   font-weight: 600;
   text-align: center;
-  margin-top: 130px;
   padding-bottom: 30px;
+}
+
+.pageTitlePadding {
+  margin-top: 100px;
 }
 
 input:hover {
