--- a/client/src/pages/DetailPage.css
+++ b/client/src/pages/DetailPage.css
@@ -1,8 +1,7 @@
 .detailPageWrapper {
   display: flex;
   justify-content: center;
-  margin: 120px 150px 0 150px; /* push below the fixed navbar */
-  min-height: calc(100vh - 80px); /* subtract navbar height */
+  margin: 0 50px;
   box-sizing: border-box;
 }
 
@@ -24,7 +23,11 @@
   flex: 7;
 }
 
-.counselingDurationWrapper {
+.detailPageTitle {
+  width: 100%;
+}
+
+.detailPageFieldSet {
   display: flex;
   flex-direction: row;
   margin-top: 20px;
@@ -50,9 +53,19 @@
   border: 1px solid black;
   border-radius: 100px;
   margin-right: 15px;
-  padding: 10px 30px;
+  padding: 5px 20px;
+}
+
+.detailPageLabel.durationActive {
+  color: white;
+  background-color: black;
 }
 
 .detailPageRadio {
-    display: none;
+  display: none;
+}
+
+.detailPageLabel.expertLevelActive {
+  color: white;
+  background-color: black;
 }
