--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -21,6 +21,7 @@
   align-items: center;
   padding: 20px 5%;
   transition: transform 0.3s ease;
+  /* border: 1px solid blue; */
 }
 
 .navbarWrapper.sticky {
