--- a/client/src/components/SingleCard.css
+++ b/client/src/components/SingleCard.css
@@ -3,10 +3,11 @@
   padding-top: 2px;
   display: flex;
   flex-direction: column;
-  /* margin-bottom: 150px; */
+  justify-content: space-between;
   border: none;
   border-radius: 0px;
   overflow: hidden;
+  box-sizing: border-box;
   box-shadow: none !important;
   /* position: relative; */
 }
