--- a/client/src/pages/DetailPage.css
+++ b/client/src/pages/DetailPage.css
@@ -148,3 +148,14 @@ input[type=number]::-webkit-outer-spin-button {
 .buyBtn:hover {
   box-shadow: 0 0 0 1px black;
 }
+
+.detailPageOrderedList {
+  padding-left: 0;
+  margin-top: 8px;
+  margin-left: 16px;
+  text-align: justify;
+}
+
+.detailPageOrderedList li {
+  margin-bottom: 15px;
+}
