--- a/client/src/pages/DetailPage.css
+++ b/client/src/pages/DetailPage.css
@@ -76,15 +76,15 @@
   width: 140px;
 }
 
-input[type=number] {
-  appearance: textfield;         /* ✅ Standard property */
-  -moz-appearance: textfield;    /* ✅ Firefox */
-  -webkit-appearance: none;      /* ✅ Chrome, Safari */
+input[type="number"] {
+  appearance: textfield; /* ✅ Standard property */
+  -moz-appearance: textfield; /* ✅ Firefox */
+  -webkit-appearance: none; /* ✅ Chrome, Safari */
 }
 
 /* Hide spin buttons in WebKit browsers (Chrome, Safari) */
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
@@ -138,7 +138,7 @@ input[type=number]::-webkit-outer-spin-button {
   margin: 0 0 10px 0;
 }
 
-.basketBtn, 
+.basketBtn,
 .buyBtn {
   padding: 10px 0;
   transition: box-shadow 0.2s ease;
@@ -149,13 +149,23 @@ input[type=number]::-webkit-outer-spin-button {
   box-shadow: 0 0 0 1px black;
 }
 
-.detailPageOrderedList {
+.detailPageNoticeOrderedList,
+.detailPageDescriptionOrderedList {
   padding-left: 0;
   margin-top: 8px;
   margin-left: 16px;
   text-align: justify;
 }
 
-.detailPageOrderedList li {
+.detailPageNoticeOrderedList li {
   margin-bottom: 15px;
+}
+
+.detailPageDescriptionOrderedList li {
+  margin-bottom: 7px;
+}
+
+.classDescription {
+  text-align: justify;
+  margin-bottom: 35px;
 }
