--- a/client/src/pages/DetailPage.css
+++ b/client/src/pages/DetailPage.css
@@ -10,7 +10,8 @@
   width: 100%;
   height: fit-content;
   position: sticky;
-  top: 110px; /* adjust based on your header or navbar height */
+  top: 110px;
+  /* adjust based on your header or navbar height */
   align-self: flex-start;
   margin-right: 120px;
 }
@@ -28,6 +29,27 @@
 
 .detailPageTitle {
   width: 100%;
+}
+
+.discountedPriceWrapper {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.discountedPriceAndBadgeWrapper {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+
+.discountedPriceAndBadgeWrapper span {
+  background-color: black;
+  color: white;
+  padding: 6px 16px;
+  font-size: 12px;
+  border-radius: 20px;
+  line-height: 1;
 }
 
 .detailPageFieldSet {
@@ -77,9 +99,12 @@
 }
 
 input[type="number"] {
-  appearance: textfield; /* ✅ Standard property */
-  -moz-appearance: textfield; /* ✅ Firefox */
-  -webkit-appearance: none; /* ✅ Chrome, Safari */
+  appearance: textfield;
+  /* ✅ Standard property */
+  -moz-appearance: textfield;
+  /* ✅ Firefox */
+  -webkit-appearance: none;
+  /* ✅ Chrome, Safari */
 }
 
 /* Hide spin buttons in WebKit browsers (Chrome, Safari) */
@@ -174,6 +199,8 @@ input[type="number"]::-webkit-outer-spin-button {
   width: fit-content;
   display: flex;
   align-items: center;
+  margin-top: 40px;
+  font-size: 13px;
 }
 
 .shareWrapper:hover {
@@ -189,4 +216,11 @@ input[type="number"]::-webkit-outer-spin-button {
   margin-left: 3px;
   border: none;
   background: none;
+}
+
+.starRatingWrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 80px;
 }
