Modify Detail Page frontend become dynamic

--- a/client/src/components/SingleCard.css
+++ b/client/src/components/SingleCard.css
@@ -46,6 +46,12 @@
   font-weight: 500;
 }
 
+.obralText {
+  text-decoration: line-through;
+  color: gray;
+  margin-right: 8px;
+}
+
 .obralBadge {
   position: absolute;
   bottom: 8px;
