--- a/client/src/components/QnaSection.css
+++ b/client/src/components/QnaSection.css
@@ -52,3 +52,11 @@
   padding: 6px 18px;
   border-bottom: 0.5px solid #eee;
 }
+
+.linkButton {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+}
