--- a/client/src/pages/DetailPage.css
+++ b/client/src/pages/DetailPage.css
@@ -29,6 +29,13 @@
 
 .detailPageTitle {
   width: 100%;
+  margin-top: 20px !important;
+}
+
+.detailPageRateWrapper {
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
 }
 
 .discountedPriceWrapper {
@@ -335,29 +342,3 @@ input[type="number"]::-webkit-outer-spin-button {
   padding: 10px;
 }
 
-.starAndDateWrapper {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.starAndDateWrapper span {
-  font-size: 12px;
-  color: gray;
-}
-
-.identityWrapper {
-  margin-bottom: 8px;
-}
-
-.commentUserIcon {
-  height: 38px;
-  width: 38px;
-  margin: 10px 10px 0 0;
-  background-color: whitesmoke;
-  padding: 6px;
-}
-
-.contentWrapper p {
-  margin-bottom: 6px;
-}
