--- a/client/src/components/Pagination.css
+++ b/client/src/components/Pagination.css
@@ -8,19 +8,35 @@
 
 .paginationWrapper button {
   padding: 6px 10px;
-  border: 1px solid #ccc;
   background-color: white;
+  border: none;
   cursor: pointer;
-  border-radius: 4px;
+  /* border: 1px solid #ccc; */
+  /* border-radius: 4px; */
 }
 
 .paginationWrapper button.active {
-  background-color: #1976d2;
-  color: white;
-  border-color: #1976d2;
+  /* background-color: #1976d2; */
+  /* border-color: #1976d2; */
+  color: black;
+  font-size: larger;
+  font-weight: bold;
 }
 
 .paginationWrapper button:disabled {
   opacity: 0.5;
   cursor: not-allowed;
+}
+
+.ellipsis {
+  padding: 0 8px;
+  font-size: 16px;
+  color: #888; /* subtle gray */
+  pointer-events: none; /* not clickable */
+  user-select: none;    /* can't highlight */
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 32px;
+  height: 32px;
 }
