--- a/client/src/components/Option.css
+++ b/client/src/components/Option.css
@@ -1,7 +1,10 @@
 .optionFieldSet {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   margin-top: 15px;
+  gap: 10px;
+  border: none;
 }
 
 .optionLegend {
@@ -15,7 +18,7 @@
   align-items: center;
   border: 1px solid black;
   border-radius: 100px;
-  margin-right: 15px;
+  /* margin-right: 15px; */
   padding: 5px 20px;
   box-sizing: border-box;
   min-width: fit-content;
