Make Recommendation service for Counselors, fetch Counselor comment and recommendation in frontend, and modify Counselor comment to display image

--- a/client/src/components/CommentSection.css
+++ b/client/src/components/CommentSection.css
@@ -25,7 +25,19 @@
   margin-right: 50px;
 }
 
+.contentWrapper::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 .contentWrapper p {
   margin-bottom: 6px;
   text-align: justify;
+}
+
+.contentWrapper p img {
+  float: left;
+  width: 100px;
+  height: auto;
 }
