--- a/client/src/components/Navbar.css
+++ b/client/src/components/Navbar.css
@@ -5,7 +5,7 @@
   background-color: white;
   display: flex;
   align-items: center;
-  padding: 20px 5%;
+  padding: 25px 5%;
   transition: transform 0.3s ease;
 }
 
@@ -17,34 +17,36 @@
   transform: translateY(0%);
 }
 
-.navbarListPage {
-  background-color: white;
-  margin: auto;
-  padding: 10px 30px;
-  display: flex;
+.navbarLists {
   list-style: none;
+  color: gray;
+  background-color: white;
+  display: flex;
+  margin: 0 0 0 30px;
 }
 
-.navbarLink {
+.navbarLists li {
   margin-right: 20px;
 }
 
-.navbarLink:hover {
-  cursor: pointer;
-  text-decoration: underline;
-}
-
-.navbarLink.navbarLinkActive {
-  text-decoration: underline;
-}
-
-.navbarLink a {
-  color: black;
+.navbarLists li a {
+  color: inherit;
   margin-right: 10px;
 }
 
-.navbarLink a:hover {
+.navbarLists li:hover {
   color: black;
+  cursor: pointer;
+}
+
+.navbarLinkActive {
+  color: black;
+  text-decoration: underline;
+}
+
+.navbarLinkActive:hover {
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
 }
 
 .navbarLinkIcon {
@@ -52,8 +54,45 @@
   margin-bottom: 3px;
 }
 
+.dropdown {
+  cursor: pointer;
+}
+
+.dropdown:hover {
+  text-decoration: underline;
+}
+
+.dropdownMenu {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  list-style: none;
+  margin: 0;
+  padding: 10px 0;
+  display: block;
+  z-index: 1000;
+  width: auto;
+  white-space: nowrap;
+}
+
+.dropdownMenu li {
+  padding: 8px 20px;
+}
+
+.dropdownMenu li a {
+  color: grey;
+  text-decoration: none;
+}
+
+.dropdownMenu li a:hover {
+  color: black;
+  text-decoration: underline;
+}
+
 .navbarButtons {
-  justify-self: end;
+  margin-left: auto;
 }
 
 .navbarButton {
@@ -85,43 +124,4 @@
   height: 25px;
   position: relative;
   top: 2px;
-}
-
-.dropdown {
-  cursor: pointer;
-}
-
-.dropdown:hover {
-  text-decoration: underline;
-}
-
-.dropdownMenu {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: white;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  list-style: none;
-  margin: 0;
-  padding: 10px 0;
-  display: block;
-  z-index: 1000;
-  width: auto;
-  white-space: nowrap;
-}
-
-.dropdownMenu li {
-  padding: 8px 20px;
-}
-
-.dropdownMenu li a {
-  color: black;
-  text-decoration: none;
-  font-weight: lighter;
-}
-
-.dropdownMenu li a:hover {
-  color: black;
-  text-decoration: underline;
-  font-weight: normal;
 }
