--- a/client/src/components/SingleCard.css
+++ b/client/src/components/SingleCard.css
@@ -3,7 +3,8 @@
   padding-top: 2px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
+  align-items: flex-start;
   border: none;
   border-radius: 0px;
   overflow: hidden;
@@ -18,9 +19,9 @@
 
 .singleCardImageWrapper {
   width: 100%;
-  height: 100%;
   position: relative;
   overflow: hidden;
+  flex-shrink: 0;
 }
 
 .singleCardImage {
@@ -53,11 +54,6 @@
 
 .cardStarSize:last-of-type {
   margin-right: 10px;
-}
-
-.singleCardPrice {
-  font-size: 16px;
-  font-weight: 500;
 }
 
 .oldPrice {
