--- a/client/src/pages/ListPage.css
+++ b/client/src/pages/ListPage.css
@@ -1,6 +1,28 @@
+.listPageTitle {
+  margin: 40px 0 25px !important;
+}
+
+.listPageDescription {
+  margin-bottom: 40px !important;
+}
+
 .filterWrapper {
   gap: 20px;
+  margin-bottom: 10px;
   display: flex;
   align-items: center;
   justify-content: end;
+}
+
+.filterWrapper select {
+  padding: 10px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  transition: border 0.2s, box-shadow 0.2s;
+}
+
+.filterWrapper select:focus {
+  outline: 1px solid #888;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
 }
