--- a/client/src/components/SingleCard.css
+++ b/client/src/components/SingleCard.css
@@ -4,13 +4,12 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   border: none;
   border-radius: 0px;
   overflow: hidden;
   box-sizing: border-box;
   box-shadow: none !important;
-  /* position: relative; */
 }
 
 .singleCard:hover {
