--- a/client/src/pages/DetailPage.css
+++ b/client/src/pages/DetailPage.css
@@ -66,6 +66,11 @@
   line-height: 1;
 }
 
+.coupleAdditionalDescription {
+  display: block;
+  margin-bottom: 20px;
+}
+
 .detailPageLegend {
   color: dimgray;
   font-size: 14px !important;
@@ -160,20 +165,7 @@ input[type="number"]::-webkit-outer-spin-button {
   box-shadow: 0 0 0 1px black;
 }
 
-.classOrderedList {
-  padding-left: 18px;
-}
-
-.classOrderedList li {
-  margin-top: 12px;
-}
-
-.paragraphText {
-  text-align: justify;
-}
-
-.detailPageNoticeOrderedList,
-.detailPageDescriptionOrderedList {
+.detailPageNoticeOrderedList {
   padding-left: 0;
   margin-top: 8px;
   margin-left: 16px;
@@ -182,15 +174,6 @@ input[type="number"]::-webkit-outer-spin-button {
 
 .detailPageNoticeOrderedList li {
   margin-bottom: 15px;
-}
-
-.detailPageDescriptionOrderedList li {
-  margin-bottom: 7px;
-}
-
-.classDescription {
-  text-align: justify;
-  margin-bottom: 35px;
 }
 
 .shareWrapper {
