--- a/client/src/pages/DetailPage.css
+++ b/client/src/pages/DetailPage.css
@@ -165,6 +165,18 @@ input[type="number"]::-webkit-outer-spin-button {
   box-shadow: 0 0 0 1px black;
 }
 
+.classOrderedList {
+  padding-left: 18px;
+}
+
+.classOrderedList li {
+  margin-top: 12px;
+}
+
+.paragraphText {
+  text-align: justify;
+}
+
 .detailPageNoticeOrderedList {
   padding-left: 0;
   margin-top: 8px;
