--- a/client/src/components/ProfileImageSwitcher.css
+++ b/client/src/components/ProfileImageSwitcher.css
@@ -1,41 +1,51 @@
-.selectedImage {
-  max-width: 320px;
+.detailPageImage {
+  flex: 7;
   width: 100%;
-  margin: 0 120px;
+  height: fit-content;
+  position: sticky;
+  top: 120px;
+  align-self: flex-start;
+  margin-right: 70px;
+}
+
+.selectedImage {
+  width: 90%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .selectedImage img {
   width: 100%;
   height: auto;
-  object-fit: contain;
   border: 2px solid black;
 }
 
 .listImages {
   display: flex;
   gap: 8px;
-  justify-content: center;
   margin-top: 12px;
   flex-wrap: wrap;
+  align-self: flex-start;
 }
 
-.listImages > div {
-  width: 64px;
-  height: 64px;
+.listImages>div {
+  width: calc((100% - 24px) / 4); /* 4 items per row, accounting for 3 gaps */
+  aspect-ratio: 1 / 1; /* make each box a square */
   cursor: pointer;
   overflow: hidden;
-  border: 2px solid transparent;
-  border-radius: 6px;
+  border: 2px solid black;
   transition: border 0.3s;
 }
 
-.listImages > div:hover {
-  border-color: #aaa;
+.listImages>div:hover img {
+  filter: brightness(0.9);
 }
 
 .listImages img {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 6px;
+  display: block;
 }
